Add option to skip packs

--- a/settings.default.json
+++ b/settings.default.json
@@ -7,5 +7,6 @@
   "saveTo": "d:\\torrents\\shows",
   "downloadProperAndRepack": true,
   "skipForeign": true,
+  "skipPacks": true,
   "shows": []
 }
