--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "ninjakatt-plugin-torrentrss",
-  "version": "1.3.12",
-  "description": "",
+  "name": "ninjadog-plugin-rssfeed",
+  "version": "1.0.0",
+  "description": "RSS feed reader for Ninjadog",
   "main": "index.js",
   "scripts": {
     "test": "echo \"No test specified\""
   },
   "keywords": [],
+  "author": "Niclas Lindstedt <nicl@slindstedt.se>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lindstrm/ninjakatt-plugin-torrentrss.git"
+    "url": "https://github.com/niclaslindstedt/ninjadog-plugin-rssfeed.git"
   },
-  "homepage": "https://github.com/lindstrm/ninjakatt-plugin-torrentrss",
+  "homepage": "https://github.com/niclaslindstedt/ninjadog-plugin-rssfeed",
   "bugs": {
-    "url": "https://github.com/lindstrm/ninjakatt-plugin-torrentrss/issues"
+    "url": "https://github.com/niclaslindstedt/ninjadog-plugin-rssfeed/issues"
   },
   "license": "ISC",
   "dependencies": {
